--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,4 +79,87 @@
     from, to { border-color: transparent }
     50% { border-color: hsl(var(--primary)); }
   }
+
+  .glitch {
+    position: relative;
+    color: hsl(var(--primary));
+    text-shadow:
+      0.05em 0 0 hsl(var(--destructive) / 0.75),
+      -0.05em 0 0 hsl(var(--accent) / 0.75),
+      -0.025em 0.05em 0 hsl(var(--destructive) / 0.75),
+      0.025em -0.05em 0 hsl(var(--accent) / 0.75);
+    animation: glitch 500ms infinite;
+  }
+
+  .glitch span {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .glitch span:first-child {
+    animation: glitch 650ms infinite;
+    clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+    transform: translate(-0.025em, -0.0125em);
+    opacity: 0.8;
+  }
+
+  .glitch span:last-child {
+    animation: glitch 375ms infinite;
+    clip-path: polygon(0 60%, 100% 60%, 100% 100%, 0 100%);
+    transform: translate(0.0125em, 0.025em);
+    opacity: 0.8;
+  }
+
+  @keyframes glitch {
+    0% {
+      text-shadow:
+        0.05em 0 0 hsl(var(--destructive) / 0.75),
+        -0.05em 0 0 hsl(var(--accent) / 0.75),
+        -0.025em 0.05em 0 hsl(var(--destructive) / 0.75),
+        0.025em -0.05em 0 hsl(var(--accent) / 0.75);
+    }
+    14% {
+      text-shadow:
+        0.05em 0 0 hsl(var(--destructive) / 0.75),
+        -0.05em 0 0 hsl(var(--accent) / 0.75),
+        -0.025em 0.05em 0 hsl(var(--destructive) / 0.75),
+        0.025em -0.05em 0 hsl(var(--accent) / 0.75);
+    }
+    15% {
+      text-shadow:
+        -0.05em -0.025em 0 hsl(var(--destructive) / 0.75),
+        0.025em 0.025em 0 hsl(var(--accent) / 0.75),
+        -0.05em -0.05em 0 hsl(var(--destructive) / 0.75),
+        0.05em 0.05em 0 hsl(var(--accent) / 0.75);
+    }
+    49% {
+       text-shadow:
+        -0.05em -0.025em 0 hsl(var(--destructive) / 0.75),
+        0.025em 0.025em 0 hsl(var(--accent) / 0.75),
+        -0.05em -0.05em 0 hsl(var(--destructive) / 0.75),
+        0.05em 0.05em 0 hsl(var(--accent) / 0.75);
+    }
+    50% {
+       text-shadow:
+        0.025em 0.05em 0 hsl(var(--destructive) / 0.75),
+        0.05em 0 0 hsl(var(--accent) / 0.75),
+        0 -0.05em 0 hsl(var(--destructive) / 0.75),
+        -0.025em 0 0 hsl(var(--accent) / 0.75);
+    }
+    99% {
+       text-shadow:
+        0.025em 0.05em 0 hsl(var(--destructive) / 0.75),
+        0.05em 0 0 hsl(var(--accent) / 0.75),
+        0 -0.05em 0 hsl(var(--destructive) / 0.75),
+        -0.025em 0 0 hsl(var(--accent) / 0.75);
+    }
+    100% {
+       text-shadow:
+        -0.025em 0 0 hsl(var(--destructive) / 0.75),
+        -0.025em -0.025em 0 hsl(var(--accent) / 0.75),
+        -0.025em -0.05em 0 hsl(var(--destructive) / 0.75),
+        0.025em 0.05em 0 hsl(var(--accent) / 0.75);
+    }
+  }
 }
